--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,8 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
         /WEB-INF/config/springRoot-context.xml
+        /WEB-INF/config/security-context.xml
+        
          </param-value>
   </context-param>
   <listener>
@@ -29,7 +31,8 @@
 		org.springframework.web.context.ContextLoaderListener 
 	</listener-class>
   </listener>
- <!--  <filter>
+  
+  <filter>
 	<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>
 			org.springframework.web.filter.DelegatingFilterProxy
@@ -39,5 +42,5 @@
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	</filter-mapping>
 </web-app>
