--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>3.2.5.RELEASE</version>
 		</dependency>
+		<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-validator</artifactId>
+  		<version>5.0.1.Final</version>
+  	</dependency>
 	</dependencies>
 
 
