--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
   		<artifactId>hibernate-validator</artifactId>
   		<version>5.0.1.Final</version>
   	</dependency>
+	
+	<dependency>
+	    <groupId>com.fasterxml.jackson.jaxrs</groupId>
+	    <artifactId>jackson-jaxrs-base</artifactId>
+	    <version>2.4.4</version>
+	</dependency>
+	
 	</dependencies>
 
 
